--- a/vaflo.css
+++ b/vaflo.css
@@ -33,19 +33,27 @@ body {
     font-size: 12cqh;
     text-align: center;
     border-radius: 3cqh;
+    border-top-style: none;
+    border-left-style: none;
+    border-right-style: none;
+    border-bottom-style: solid;
+    border-width: 2cqh;
 }
 
 .letter.correct {
+    border-color: #649e53;
     background-color: #6fb05c;
     color: white;
 }
 
 .letter.wrong-position {
+    border-color: #d1a734;
     background-color: #e9ba3a;
     color: white;
 }
 
 .letter.wrong {
+    border-color: #d5d7d8;
     background-color: #edeff1;
     color: black;
 }
