--- a/vaflo.css
+++ b/vaflo.css
@@ -10,6 +10,10 @@ body {
     background-color: #eeeeee;
 }
 
+h1 {
+    text-align: center;
+}
+
 #message {
     font-size: large;
     text-align: center;
