Lighten the page background color

--- a/vaflo.css
+++ b/vaflo.css
@@ -7,7 +7,7 @@ body {
 #content {
     display: flex;
     flex-direction: column;
-    background-color: #eeeeee;
+    background-color: #fff;
 }
 
 h1 {
