wasm_game: Add a sliding animation when swapping tiles

--- a/vaflo.css
+++ b/vaflo.css
@@ -72,6 +72,17 @@ h1 {
     color: black;
 }
 
+.letter.sliding {
+    animation: 0.25s ease-in 0s slide;
+    animation-fill-mode: forwards;
+}
+
+@keyframes slide {
+    to {
+        transform: translate(0px, 0px);
+    }
+}
+
 @media only all and (max-width: 45em) {
     #content {
         position: absolute;
