--- a/vaflo.css
+++ b/vaflo.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #fff;
+    padding-bottom: 3em;
 }
 
 h1 {
@@ -89,7 +90,6 @@ h1 {
         top: 0px;
         left: 0px;
         width: 100%;
-        height: 100%;
         margin-left: 0px;
         margin-right: 0px;
         border-radius: 0px;
@@ -102,6 +102,5 @@ h1 {
         margin-left: auto;
         margin-right: auto;
         border-radius: 4px;
-        height: 95vh;
     }
 }
