--- a/vaflo.css
+++ b/vaflo.css
@@ -25,6 +25,7 @@ h1 {
 }
 
 #game-grid {
+    display: grid;
     margin-left: auto;
     margin-right: auto;
     width: 70%;
@@ -83,6 +84,13 @@ h1 {
     to {
         transform: translate(0px, 0px);
     }
+}
+
+#swaps-remaining {
+    margin-top: 2em;
+    font-size: large;
+    text-align: center;
+    font-weight: bold;
 }
 
 @media only all and (max-width: 45em) {
