--- a/vaflo.css
+++ b/vaflo.css
@@ -174,12 +174,11 @@ h1, h2 {
 }
 
 #share-button {
+    margin-top: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
-    padding: 1em;
-}
-
-#share-button button {
-    display: inline-block;
+    display: block;
     background-color: #6fb05c;
     border-color: #649e53;
     border-style: none none solid none;
@@ -190,7 +189,7 @@ h1, h2 {
     border-radius: 0.5em;
 }
 
-#share-button button:active {
+#share-button:active {
     border-style: solid none none none;
     border-color: #6fb05c;
 }
