--- a/vaflo.css
+++ b/vaflo.css
@@ -2,13 +2,15 @@ body {
     background-color: #009688;
     font-family: sans-serif;
     overscroll-behavior-y: contain;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 #content {
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    padding-bottom: 3em;
+    min-height: 100vh;
 }
 
 h1, h2 {
@@ -232,6 +234,5 @@ h1, h2 {
         max-width: 40em;
         margin-left: auto;
         margin-right: auto;
-        border-radius: 4px;
     }
 }
