--- a/vaflo.css
+++ b/vaflo.css
@@ -175,6 +175,11 @@ h1, h2 {
     text-align: left;
 }
 
+#statistics p {
+    margin: 2em;
+    text-align: center;
+}
+
 #share-button {
     margin-top: 0.5em;
     margin-left: auto;
